--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,8 @@
               "src/styles.scss",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/primeicons/primeicons.css",
-              "./node_modules/primeng/resources/themes/saga-blue/theme.css"
+              "./node_modules/primeng/resources/themes/saga-blue/theme.css",
+              "./node_modules/leaflet/dist/leaflet.css"
             ],
             "scripts": [
               "./node_modules/bootstrap/dist/js/bootstrap.js"
