--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "angular-plotly.js": "^4.0.4",
     "bootstrap": "^5.1.2",
     "bootstrap-icons": "^1.5.0",
     "faker": "^5.5.3",
     "jspdf": "^2.4.0",
     "jspdf-autotable": "^3.5.20",
+    "leaflet": "^1.7.1",
     "ngx-bootstrap": "^7.1.0",
+    "plotly.js-dist-min": "^2.5.1",
     "primeicons": "^4.1.0",
     "primeng": "^12.2.0",
     "rxjs": "~6.6.0",
@@ -36,7 +39,9 @@
     "@angular/cli": "~12.2.9",
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
+    "@types/leaflet": "^1.7.5",
     "@types/node": "^12.11.1",
+    "@types/plotly.js-dist-min": "^2.3.0",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
