--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "angular-plotly.js": "^4.0.4",
+    "apexcharts": "^3.29.0",
     "bootstrap": "^5.1.2",
     "bootstrap-icons": "^1.5.0",
     "faker": "^5.5.3",
     "jspdf": "^2.4.0",
     "jspdf-autotable": "^3.5.20",
     "leaflet": "^1.7.1",
+    "ng-apexcharts": "^1.5.12",
     "ngx-bootstrap": "^7.1.0",
     "plotly.js-dist-min": "^2.5.1",
     "primeicons": "^4.1.0",
